<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allStrength"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
        <TextView
            android:id="@+id/target_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="100"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="kg"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leftTarget"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/lefttarget_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="100"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="kg"/>
    </LinearLayout>
    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/all_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:progress_unreached_bar_height="40dp"
        app:progress_reached_bar_height="40dp"
        app:progress_max="100"
        app:progress_current="30"
        android:padding="10dp"
        app:progress_reached_color="@color/reachBarColor"
        app:progress_unreached_color="@color/unreachBarColor"
        app:progress_text_size="18sp"
        app:progress_text_offset="5dp"
        app:progress_text_color="@color/reachBatTextColor"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singleStrength"
            android:textSize="20sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/singlestrength_textvew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="70sp"
            android:textColor="@color/black"
            android:text="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="kg"/>

    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/target_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <info.hoang8f.widget.FButton
            android:id="@+id/target_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:shadowHeight="5dp"
            android:layout_margin="10dp"
            android:text="@string/targetbutton"
            android:textSize="15sp"
            ></info.hoang8f.widget.FButton>
    </LinearLayout>
    <!--<Button-->
        <!--android:id="@+id/button_start"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/teststart"-->
        <!--android:textSize="25sp"-->
        <!--android:gravity="center"-->
        <!--android:layout_margin="10dp"/>-->
    <info.hoang8f.widget.FButton
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/teststart"
        android:textSize="25sp"
        android:gravity="center"
        app:buttonColor="@color/startButton"
        app:shadowHeight="5dp"/>
    <!--<Button-->
        <!--android:id="@+id/button_buletooth"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/bluetooth_search"-->
        <!--android:textSize="25sp"-->
        <!--android:gravity="center"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--/>-->
    <info.hoang8f.widget.FButton
        android:id="@+id/button_buletooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bluetooth_search"
        android:textSize="25sp"
        android:gravity="center"
        app:buttonColor="@color/bluetoothButton"
        app:shadowHeight="5dp"/>
    <info.hoang8f.widget.FButton
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/clean_button"
        android:textSize="25sp"
        android:gravity="center"
        app:buttonColor="@color/clear_button"
        app:shadowHeight="5dp"/>


</LinearLayout>